[package]
name = 'bartime'
version = '0.1.0'
authors = ['drbh']
edition = '2018'

[dependencies]
objc = '0.2.6'
objc-foundation = '0.1.1'
cocoa = '0.19.0'
fruitbasket = '0.8.0'
objc_id = '0.1.1'
toml = '0.5.1'
chrono = '0.4'
notify = '4.0.17'
run_script = '0.8.0'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.chrono-tz]
version = '0.4'
features = ['serde']
