[package]
name = 'bartime'
version = '0.1.0'
authors = ['https://github.com/drbh']
edition = '2018'
description = 'A simple developer friendly top bar clock for OSX. Made for people who work with others in many different timezones.'
license = 'MIT/Apache-2.0'
keywords = [
    'clock',
    'topbar',
    'timezone',
]
homepage = 'https://github.com/drbh/bartime'
repository = 'https://github.com/drbh/bartime.git'
readme = 'README.md'

[dependencies]
objc = '0.2.6'
objc-foundation = '0.1.1'
cocoa = '0.19.0'
fruitbasket = '0.8.0'
objc_id = '0.1.1'
toml = '0.5.1'
chrono = '0.4'
notify = '4.0.17'
run_script = '0.8.0'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.chrono-tz]
version = '0.4'
features = ['serde']
